<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E9EDEDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/buttonClose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fragmentUser_userName"
                    android:textAlignment="textStart"
                    android:textColor="#2B2B2B"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editTextName" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fragmentUser_userSurname"
                    android:textAlignment="textStart"
                    android:textColor="#2B2B2B"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextSurname"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="Surname"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/editTextName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/editTextName"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/fragmentUser_userEmail"
                    android:textAlignment="textStart"
                    android:textColor="#2B2B2B"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="172dp"
                android:layout_height="173dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/img_account_test"
                tools:src="@tools:sample/avatars" />

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="133dp"
                android:layout_height="64dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="24dp"
                android:text="@string/fragmentUserEdit_btnClose"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonConfirm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="133dp"
                android:layout_height="64dp"
                android:layout_marginEnd="32dp"
                android:text="@string/fragmentUserEdit_btnConfirm"
                app:layout_constraintBottom_toBottomOf="@+id/buttonClose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/buttonClose"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>